# error-handling-compairsion

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt
.github/: CI_ubuntu.yaml
.github/workflows/: CI_ubuntu.yaml  CI_windows.yaml
cmake/: deps.cmake
examples/http-request/: common.hpp  errc.cpp  exceptions.cpp  expected.cpp  leaf.cpp  outcome.cpp
examples/load-json-config/: config.json  config_common.hpp  errc.cpp  exceptions.cpp  expected.cpp  leaf.cpp  outcome.cpp
scripts/: ci_ubuntu.make  presets_ubuntu-24.04.json  presets_windows.json
